fixing scrollbar

--- a/styles/card-form.css
+++ b/styles/card-form.css
@@ -1,4 +1,5 @@
 .card-form {
+  overflow-x: hidden;
   visibility: hidden;
   position: absolute;
   width: 100%;
@@ -105,7 +106,8 @@
   line-height: 21.78px;
   text-align: center;
   max-width: 358px;
-  padding: 16.07px 124.5px;
+  width: 100%;
+  padding: 16.07px;
   align-self: center;
   border: none;
 }
@@ -125,6 +127,14 @@
 }
 
 @media screen and (max-width: 768px) {
+  .card-form__card {
+    max-width: 430px;
+    margin-left: 19px;
+    margin-right: 19px;
+    padding-left: 22px;
+    padding-right: 22px;
+  }
+
   .card-form__exit {
     width: 26px;
     height: 26px;
@@ -170,10 +180,6 @@
     margin-bottom: 76px;
   }
 
-  .card-form__data {
-    gap: 30px;
-  }
-
   .card-form__input {
     border: 0;
     border-bottom: 1px solid;
@@ -191,6 +197,6 @@
     font-size: 14px;
     line-height: 16.94px;
     max-width: 238px;
-    padding: 14px 96px;
+    padding: 14px;
   }
 }
